@startuml TestingSystem

' Применение параметров
skinparam linetype ortho
skinparam classRoundCorner 0
skinparam classBorderThickness 2
skinparam classFontName "Times New Roman"
skinparam classFontSize 14
skinparam classFontStyle normal
skinparam classFontColor black
skinparam classAttributeIconSize 0
skinparam classBorderColor black
skinparam classBackgroundColor white
skinparam classArrowColor black
skinparam classAbstractFontStyle italic
skinparam classAbstractFontColor black
skinparam classAbstractUnderline true
skinparam inheritanceArrowColor black
hide circle

' Пакет Core Entities
package "Core Entities" {
  class User {
    - fio: string
    - faculty: string
    - groupNum: int
    --
    + User()
    + User(string, string, int)
    + getFio(): string
    + getFaculty(): string
    + getGroupNum(): int
    + setFio(string): void
    + setFaculty(string): void
    + setGroupNum(int): void
  }

  class Answer {
    - date: string
    - testName: string
    --
    + Answer()
    + Answer(string, string, int, string, string)
    + getDate(): string
    + getTestName(): string
    + setDate(string): void
    + setTestName(string): void
  }

  class Result {
    - result: float
    - passed: bool
    --
    + Result()
    + Result(string, string, int, string, string, float)
    + getResult(): float
    + getPassed(): bool
    + setResult(float): void
    + display(): void
    + displayTableRow(int): void
    + saveToFile(ofstream&, int): void
    + displayTableHeader(): void
    + displayTableFooter(): void
  }

  ' Наследование
  User <|-- Answer
  Answer <|-- Result
}

' Пакет Questions
package "Questions System" {
  interface IQuestion {
    + displayQuestion(): void
    + checkAnswer(int): bool
    + getScores(): int
    + getType(): string
    + getQuestionText(): string
    + getVariantsCount(): int
  }

  class Question<TQuestion, TVariants> {
    - questionText: TQuestion
    - variants: TVariants[MAX_VARIANTS]
    - variantsCount: int
    - rightVariantNumber: int
    - scores: int
    - typeName: string
    - MAX_VARIANTS: int = 10
    --
    + Question()
    + Question(TQuestion, TVariants[], int, int, int, string)
    + getQuestionText(): string
    + getVariantsCount(): int
    + getVariant(int): TVariants
    + getRightVariantNumber(): int
    + getScores(): int
    + getType(): string
    + setQuestionText(TQuestion): void
    + setVariants(TVariants[], int): void
    + setRightVariantNumber(int): void
    + setScores(int): void
    + checkAnswer(int): bool
    + displayQuestion(): void
  }

  ' Реализация интерфейса
  IQuestion <|.. Question
}

' Пакет Test Management
package "Test Management" {
  class Test {
    - testName: string
    - testTheme: string
    - questions: IQuestion*[MAX_QUESTIONS]
    - answers: Answer[MAX_ANSWERS]
    - results: Result[MAX_RESULTS]
    - questionCount: int
    - answerCount: int
    - resultCount: int
    - MAX_QUESTIONS: int = 50
    - MAX_ANSWERS: int = 100
    - MAX_RESULTS: int = 100
    - MAX_VARIANTS: int = 10
    --
    + Test()
    + Test(string, string)
    + getTestName(): string
    + getTestTheme(): string
    + getQuestionCount(): int
    + getAnswerCount(): int
    + getResultCount(): int
    + setTestName(string): void
    + setTestTheme(string): void
    + addQuestion(IQuestion*): bool
    + addAnswer(Answer): bool
    + addResult(Result): bool
    + displayTestInfo(): void
    + showMenu(): void
    - addTextQuestion(): void
    - addNumericQuestion(): void
    - displayAllQuestions(): void
    - takeTest(): void
    - displayResults(): void
    - displayResultsTable(): void
    - saveResultsToFile(): void
  }
}

' Пакет Utilities
package "Utilities" {
  class Utils {
    + getCurrentDate(): string
    + getInputInt(string, int, int): int
    + getInputInt(string): int
    + getInput<T>(string): T
  }
}

' Пакет Menu
package "Menu System" {
  class Menu {
    + mainMenu(): void
  }
}

' Ассоциации и зависимости
Test --> "0..*" IQuestion : содержит
Test --> "0..*" Answer : хранит
Test --> "0..*" Result : хранит
Test ..> Utils : использует
Menu ..> Test : управляет
Menu ..> Utils : использует

' Специализации шаблонов
class TextQuestion {
  <<specialization>>
  Question<string, string>
}

class NumericQuestion {
  <<specialization>>
  Question<string, int>
}

Question --> TextQuestion
Question --> NumericQuestion

' Note для объяснения шаблонов
note right of Question
  Шаблонный класс:
  TQuestion - тип вопроса
  TVariants - тип вариантов ответов
  Специализации:
  - TextQuestion: string, string
  - NumericQuestion: string, int
end note

' Note для констант
note bottom of Test
  Константы:
  MAX_QUESTIONS = 50
  MAX_ANSWERS = 100
  MAX_RESULTS = 100
  MAX_VARIANTS = 10
end note

@enduml